Fix overlapping apply buttons in careers page

--- a/css/style.css
+++ b/css/style.css
@@ -772,9 +772,9 @@
 		}
 
 		.button.extrasmall {
-			font-size: 0.5em;
-			min-width: 10em;
-			padding: 0.2em 0;
+			font-size: 0.4em;
+			min-width: 9em;
+			padding: 0em 0;
 			float: right;
 		}
 
